<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_student_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:weightSum="1">

    <LinearLayout
        android:elevation="10dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:elevation="10dp"
            android:padding="10dp"
            android:background="@color/back"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorAccent2"
                android:text="@string/user"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textName"
                android:textSize="25sp"
                android:layout_gravity="start"/>
            <TextView
                android:id="@+id/textViewOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="&#8942;"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="end"/>
        </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_Course"
                    android:text="@string/course"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="start"/>

                <TextView
                    android:id="@+id/textDate"
                    android:text="@string/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:gravity="end"/>
            </LinearLayout>
            <TextView

                android:text="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textAddress"
                android:textSize="18sp"
                android:layout_gravity="start"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:id="@+id/textTel"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:id="@+id/textMail"
                android:textSize="18sp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <Button
                    style ="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/activity_share_btn"
                    android:textColor="@color/colorAccent2"
                    android:layout_marginTop="5dp"
                    android:text="@string/btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"/>
                <Button
                    style ="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/activity_go_btn"
                    android:textColor="@color/colorAccent2"
                    android:layout_marginTop="5dp"
                    android:text="@string/btn_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"/>

                <Button
                    style ="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/activity_call_btn"
                    android:textColor="@color/colorAccent2"
                    android:layout_marginTop="5dp"
                    android:text="@string/btn_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"/>
                <Button
                    style ="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/activity_info_btn"
                    android:textColor="@color/colorAccent2"
                    android:layout_marginTop="5dp"
                    android:text="@string/btn_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>