<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">




        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/login_email_txt"
            android:hint="@string/email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText

            android:inputType="textPassword"
            android:id="@+id/login_pwd_txt"
            android:layout_below="@+id/login_email_txt"
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




        <TextView
            android:id="@+id/login_log_btn"
            android:textAlignment="center"
            android:text="@string/login_hint"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>